2005-08-11  Billy Biggs  <vektor@dumbterm.net>

	* src/icrect.c: (pixman_fill_rect_1bpp), (pixman_color_rects):
	Add support for filling 1bpp images (used to clear A1 masks).

2005-08-10  Billy Biggs  <vektor@dumbterm.net>

	reviewed by: cworth and Jeff Muizelaar at various stages

	* src/fbcompose.c: (PictureTransformPoint3d), (fbFetch_a8r8g8b8),
	(fbFetch_x8r8g8b8), (fbFetch_a8b8g8r8), (fbFetch_x8b8g8r8),
	(fbFetch_r8g8b8), (fbFetch_b8g8r8), (fbFetch_r5g6b5),
	(fbFetch_b5g6r5), (fbFetch_a1r5g5b5), (fbFetch_x1r5g5b5),
	(fbFetch_a1b5g5r5), (fbFetch_x1b5g5r5), (fbFetch_a4r4g4b4),
	(fbFetch_x4r4g4b4), (fbFetch_a4b4g4r4), (fbFetch_x4b4g4r4),
	(fbFetch_a8), (fbFetch_r3g3b2), (fbFetch_b2g3r3),
	(fbFetch_a2r2g2b2), (fbFetch_a2b2g2r2), (fbFetch_c8), (fbFetch_a4),
	(fbFetch_r1g2b1), (fbFetch_b1g2r1), (fbFetch_a1r1g1b1),
	(fbFetch_a1b1g1r1), (fbFetch_c4), (fbFetch_a1), (fbFetch_g1),
	(fetchProcForPicture), (fbFetchPixel_a8r8g8b8),
	(fbFetchPixel_x8r8g8b8), (fbFetchPixel_a8b8g8r8),
	(fbFetchPixel_x8b8g8r8), (fbFetchPixel_r8g8b8),
	(fbFetchPixel_b8g8r8), (fbFetchPixel_r5g6b5),
	(fbFetchPixel_b5g6r5), (fbFetchPixel_a1r5g5b5),
	(fbFetchPixel_x1r5g5b5), (fbFetchPixel_a1b5g5r5),
	(fbFetchPixel_x1b5g5r5), (fbFetchPixel_a4r4g4b4),
	(fbFetchPixel_x4r4g4b4), (fbFetchPixel_a4b4g4r4),
	(fbFetchPixel_x4b4g4r4), (fbFetchPixel_a8), (fbFetchPixel_r3g3b2),
	(fbFetchPixel_b2g3r3), (fbFetchPixel_a2r2g2b2),
	(fbFetchPixel_a2b2g2r2), (fbFetchPixel_c8), (fbFetchPixel_a4),
	(fbFetchPixel_r1g2b1), (fbFetchPixel_b1g2r1),
	(fbFetchPixel_a1r1g1b1), (fbFetchPixel_a1b1g1r1),
	(fbFetchPixel_c4), (fbFetchPixel_a1), (fbFetchPixel_g1),
	(fetchPixelProcForPicture), (fbStore_a8r8g8b8), (fbStore_x8r8g8b8),
	(fbStore_a8b8g8r8), (fbStore_x8b8g8r8), (fbStore_r8g8b8),
	(fbStore_b8g8r8), (fbStore_r5g6b5), (fbStore_b5g6r5),
	(fbStore_a1r5g5b5), (fbStore_x1r5g5b5), (fbStore_a1b5g5r5),
	(fbStore_x1b5g5r5), (fbStore_a4r4g4b4), (fbStore_x4r4g4b4),
	(fbStore_a4b4g4r4), (fbStore_x4b4g4r4), (fbStore_a8),